==> AppendixPi/ESP32_basic_libs_ESP-IDF/OLED_SSD1316/SSD1306.c <==
#include "SSD1306.h"
#include "freertos/FreeRTOS.h"
#include "octo_s_config.h"
#include "SSD1316_img.h"

void ssd1306_write_data(uint8_t *value, uint32_t lenght ) {
    spi_transaction_t t = {
        .tx_buffer = value,
        .length = lenght * 8
    };
    ESP_ERROR_CHECK(spi_device_polling_transmit(spi2, &t));
}

void ssd1306_Reset(void) {
	// CS = High (not selected)
	gpio_set_level(CS_PIN,1);

	// Reset the OLED
	gpio_set_level(D_RESET_PIN, 0);
	vTaskDelay(10 / portTICK_PERIOD_MS);
	gpio_set_level(D_RESET_PIN, 1);
	vTaskDelay(10 / portTICK_PERIOD_MS);
}

void ssd1306_WriteCommand(uint8_t byte) {
    gpio_set_level(CS_PIN,0);
    gpio_set_level(D_DC_PIN, 0);
    ssd1306_write_data(&byte,1);
    gpio_set_level(CS_PIN,1);
}

void ssd1306_WriteData(uint8_t* buffer, size_t buff_size) {

    gpio_set_level(CS_PIN,0);
    gpio_set_level(D_DC_PIN, 1);
    ssd1306_write_data(buffer,buff_size);
    gpio_set_level(CS_PIN,1);
}
